# opencv_vision

./: .gitignore  Tracking2.sln  log.txt
Linux/: ReadMe.txt  Tracking2.cpp  bucket.cpp  bucket.h  motionTracking.cpp  objectDetection.h  stdafx.cpp
Linux_videofeed/: Tracking2.vcxproj.filters  bucket.cpp  motionTracking.cpp  test.cpp
Notrelease/: bucket.cpp  bucket.h  motionTracking.cpp  objectDetection.cpp
Tracking2/: Tracking2.vcxproj  bucket.cpp  motionTracking.cpp  objectDetection.cpp  objectDetection.h
Vision_Tape/: CMakeCache.txt  CMakeLists.txt  Makefile  UDPBroadcastReceiver.h  UDPBroadcastSender.h  UDPException.h  UDPHostClient.h  bucket.cpp  bucket.h  cmake_install.cmake  main.cpp  output_log.txt
